fix: mobile responsiveness overflow

--- a/styles/Button.module.scss
+++ b/styles/Button.module.scss
@@ -5,11 +5,15 @@
   border: none;
   background: orangered;
   color: #fff;
-  width: 80%;
+  width: 90%;
   position: fixed;
   bottom: 50px;
   font-size: 16px;
   left: 50%;
   transform: translateX(-50%); 
   cursor: pointer;
+
+  @media only screen and (max-width: 1024px) {
+    bottom: 15px;
+  }
 }
