--- a/styles/Navigation.module.scss
+++ b/styles/Navigation.module.scss
@@ -2,7 +2,7 @@
   background: black;
   height: 70px;
   color: #fff;
-  width: 100vw;
+  width: 100%;
 
   .innerNavigation {
     display: flex;
